--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
 </head>
 
 <body>
+    <!--header-->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+     <!--nav bar-->
         <nav>
             <ul>
-                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
-                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
-                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+                <li><a href="#search-engine">Search Engine Optimization</a></li>
+                <li><a href="#online-reputation">Online Reputation Management</a></li>
+                <li><a href="#social-media">Social Media Marketing</a></li>
             </ul>
         </nav>
     </header>
-    <sectioin class="hero"></section>
+    <!--Office Meeting Picture-->
+    <figure class="hero" alt="staff meeting"></figure>
 
     <section class="content">
-        <section class="search-engine-optimization"  id="search-engine">
+        <section class="search-engine-optimization"  id="search-engine" >
             <img src="./assets/images/search-engine-optimization.jpg" alt ="Picture of coffee mug, computer and note pad with seo info" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
@@ -61,7 +64,7 @@
     </section>
 
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
 </body>
