--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </section>
-    </sectioin>
+    </section>
     
     <section class="benefits">
         <section class="benefit-lead">
